--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,35 @@
+/* Reset css */
+
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+img,
+header,
+nav,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  // font: inherit;
+  // vertical-align: baseline;
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
